@@ -26,6 +26,7 @@ along with this program, see the file COPYING. If not, see
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
+#include <stdint.h>
 
 #include "e_lib.h"
 
@@ -36,22 +37,30 @@ int main(void)
 	unsigned counter;
 	unsigned *p;
 	unsigned *p1;
+	volatile uint32_t *host_flag;
+
 	mutex_p = (void *)0x00004000;
 	p = (void *)0x00006000;
 	p1 = (void *)0x00006200;
 
+	/* Host go flag */
+	host_flag = (volatile uint32_t *) 0x80806400;
+
+	/* Wait for host go flag before starting */
+	while (!(*host_flag)) ;
+
 	// Wait to get the key
 	e_mutex_lock(0, 0, mutex_p);
-	
+
 	// After get the key, add 1 to the counter
 	counter = *((unsigned *) 0x80806000);
-	
+
 	counter = counter + 1;
-	
+
 	*((unsigned *) 0x80806000) = counter;
-	
+
 	// Release the key
 	e_mutex_unlock(0, 0, mutex_p);
-	
+
 	return 0;
 }
