@@ -1,3 +1,11 @@
+2015-01-27  Ola Jeppsson  <ola@adapteva.com>
+
+	* cpu/mutex/src/e_mutex_test.c (int main): Set flag on core0
+	to start computation. Update expected clock cycles.
+	* cpu/mutex/src/e_mutex_test0.c: Wait on go flag before
+	starting.
+	* cpu/mutex/src/mutex_test.c: Likewise.
+
 2015-01-26  Ola Jeppsson  <ola@adapteva.com>
 
 	* apps/matmul-16/host/src/matmul_host.c (int main): Also clock
